objects/PMC_SS_CasePriorityAssignment__mdt.object
<CustomObject>
    <description>This metadata is used to set the Case priority based on Case Type And Account Segmentation.</description>
    <fields>
        <fullName>PMC_SS_IssueReason__c</fullName>
        <label>Issue Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Delivery Delay</fullName>
                </value>
                <value>
                    <fullName>Missing Cargo</fullName>
                </value>
                <value>
                    <fullName>Incorrect Destination</fullName>
                </value>
                <value>
                    <fullName>Ship Date / Scheduling</fullName>
                </value>
                <value>
                    <fullName>Equipment Failure</fullName>
                </value>
                <value>
                    <fullName>Diversion</fullName>
                </value>
                <value>
                    <fullName>Demurrage</fullName>
                </value>
                <value>
                    <fullName>Incorrect UOM</fullName>
                </value>
                <value>
                    <fullName>Driver Verification/Change</fullName>
                </value>
                <value>
                    <fullName>Route / Directions</fullName>
                </value>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
                <value>
                    <fullName>Mode of transportation</fullName>
                </value>
                <value>
                    <fullName>Weight Discrepancy</fullName>
                </value>
                <value>
                    <fullName>Incorrect Product</fullName>
                </value>
                <value>
                    <fullName>Product Concern</fullName>
                </value>
                <value>
                    <fullName>Incorrect Label</fullName>
                </value>
                <value>
                    <fullName>Product Request</fullName>
                </value>
                <value>
                    <fullName>Account Issues</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Document Request</fullName>
                </value>
                <value>
                    <fullName>Data Entry</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Stock Out / Plant Outage</fullName>
                </value>
                <value>
                    <fullName>Article Request</fullName>
                </value>
                <value>
                    <fullName>MDM Verification</fullName>
                </value>
                <value>
                    <fullName>Incorrect Vehicle ID</fullName>
                </value>
                <value>
                    <fullName>Invoice Adjustments</fullName>
                </value>
                <value>
                    <fullName>Order Date</fullName>
                </value>
                <value>
                    <fullName>Destination Change</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                    <default>true</default>
                    <label>High</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_Segmentation__c</fullName>
        <label>Segmentation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strategic</fullName>
                    <default>true</default>
                    <label>Strategic</label>
                </value>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>Prime</fullName>
                </value>
                <value>
                    <fullName>Ultra</fullName>
                </value>
                <value>
                    <fullName>Grow</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Mega Farmers</fullName>
                </value>
                <value>
                    <fullName>Top Farmers</fullName>
                </value>
                <value>
                    <fullName>Farmers</fullName>
                </value>
                <value>
                    <fullName>Mid Farmers</fullName>
                </value>
                <value>
                    <fullName>Small Farmers</fullName>
                </value>
                <value>
                    <fullName>Key</fullName>
                </value>
                <value>
                    <fullName>Canal KAM</fullName>
                    <label>Canal - KAM</label>
                </value>
                <value>
                    <fullName>Trader KAM</fullName>
                    <label>Trader - KAM</label>
                </value>
                <value>
                    <fullName>Mega Farmer KAM</fullName>
                    <label>EU - KAM Mega Farmer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Shipping</fullName>
                    <default>true</default>
                    <label>Shipping</label>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Mosaic Direct</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Transactions</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                    <isActive>false</isActive>
                    <label>Billing</label>
                </value>
                <value>
                    <fullName>Internal Request</fullName>
                    <isActive>false</isActive>
                    <label>Internal Request</label>
                </value>
                <value>
                    <fullName>NPK Blend Request</fullName>
                    <isActive>false</isActive>
                    <label>NPK Blend Request</label>
                </value>
                <value>
                    <fullName>New Product Registration</fullName>
                    <isActive>false</isActive>
                    <label>New Product Registration</label>
                </value>
                <value>
                    <fullName>Order</fullName>
                    <isActive>false</isActive>
                    <label>Order</label>
                </value>
                <value>
                    <fullName>Technical</fullName>
                    <isActive>false</isActive>
                    <label>Technical</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PMC SS Case Priority Assignment</label>
    <pluralLabel>PMC SS Case Priority Assignments</pluralLabel>
</CustomObject>